materiale/quiz.css
/* Lexend */
/* @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap'); */
/* Winky Sans */
/* @import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap'); */
/* Gabarito */
@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap');

:root {
    --background-color-1: #e2f6f2;
    --background-color-2: #aae8c2;
    /* --background-color-3: #55936d; */
    --text-color-1: #2b2240;
    --accent-color: rgb(87, 78, 151);

    --code-bg: #cafadc;
    --code-text: #333;
    --test: #275b37;
}

body {
    min-height: 98vh;
    font-family: 'Gabarito', sans-serif;
    font-size: 18px;
    background-color: var(--background-color-1);
    color: var(--text-color-1);

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1, h2 {
    font-weight: 600;
    color: var(--accent-color);
}

h1 {
    font-size: 2rem;
    margin-bottom: 0;
}

.quiz-container {
    max-width: 600px;
    padding: 20px;
    background-color: var(--background-color-2);
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-items: flex-start;
    justify-content: flex-start;
}

input[type="text"] {
    border: none;
    border-radius: 4px;
    margin-left: 10px;
    height: 1.5rem;
    width: 8rem;
}

button {
    background-color: var(--accent-color);
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    height: 1.5rem;
}

.cod {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.question {
    width: 100%;
}

.question-container {
    width: 100%;
    box-sizing: border-box;
}

.code-block {
    display: block;
    background-color: var(--code-bg);
    color: var(--code-text);
    padding: 10px;
    border-radius: 4px;
    font-family: monospace;
    margin: 10px 0;
    width: 100%;
    box-sizing: border-box;
}

.code-inline {
    background-color: var(--code-bg);
    color: var(--code-text);
    padding: 2px 4px;
    border-radius: 4px;
    font-family: monospace;
}

button.correct {
    background-color: #4CAF50;
    cursor: default;
}

button.incorrect {
    background-color: #d56447;
    cursor: default;
}

hr {
    width: 100%;
    border: 1px solid var(--accent-color);
    margin: 20px 0;
}

.question ul {
    padding: 0;
    margin: 1em 0;
}

.question li {
    margin-bottom: 15px;
    list-style: none;
}

.question li input[type="radio"] {
    margin-right: 10px;
    scale: 1.2;
    accent-color: var(--accent-color);
}

/* Results container styles */
.results-container {
    width: 100%;
    box-sizing: border-box;
    margin-top: 20px;
    padding: 20px;
    background-color: var(--background-color-1);
    border-radius: 8px;
    border: 2px solid var(--accent-color);
    overflow: visible;

    /* min-height: 500px; */

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.results-container p {
    margin: 10px 0;
}

button#retry-quiz {
    background-color: var(--accent-color);
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    padding: 10px 20px;
    font-size: 1rem;
    margin-top: 10px;
    box-sizing: content-box;
}


.visited-container {
    width: 100%;
}

.visited-id {
    display: block;
    box-sizing: border-box;
    border-radius: 4px;
    padding: 10px;
    width: 100%;

    background-color: var(--background-color-1);
}

